fix actions alignment

--- a/client/web/src/repo/components/RepoHeaderActions/RepoHeaderActions.module.scss
+++ b/client/web/src/repo/components/RepoHeaderActions/RepoHeaderActions.module.scss
@@ -11,4 +11,8 @@
 .action {
     margin-right: 0.625rem;
     padding: 0.25rem;
+
+    &:last-child {
+        margin-right: 0;
+    }
 }
